# accounts_workshop

./: .gitignore  Scarb.toml  config.yaml  pyproject.toml
accounts_workshop/: configs.py  contracts_utils.py  get_transaction_receipt.py  hello_account_deployment.py  main.py
accounts_workshop/data/: ERC20Contract_ABI.json
accounts_workshop/deployment_scripts/: tutorial_deployment.py
scripts/: main.py
src/: accounts.cairo  evaluator.cairo  lib.cairo  old_terc20.cairo  token.cairo  tutorial.cairo
src/accounts/: eth_account.cairo  hello_account.cairo  standard_account.cairo
src/token/: TDERC20.cairo
src/tutorial/: IAccountsInterfaces.cairo  IPlayerRegistry.cairo  IWorkshopSupportContract.cairo  PlayerRegistry.cairo  workshopSupportContract.cairo
starknetpy/: contracts.py  deploy_evaluator.py  hello_account_deployment.py  main.py  utils.py
starknetpy/deployment_scripts/: tutorial_deployment.py
